--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -150,7 +150,7 @@ nav img.user-profile {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
-@media only screen and (device-width: 360px) and (device-height: 640px)  and (-webkit-device-pixel-ratio: 2) { /*smartphones*/
+@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { /*smartphones*/
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
@@ -185,7 +185,42 @@ nav img.user-profile {
   }
 }
 
-@media (device-width: 640px) {
+@media only screen and (device-width: 320px) and (device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { /*smartphones*/
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+    flex-shrink: 2 !important;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 240px;
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 640px) {
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
