--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -5,12 +5,12 @@
     padding: 0;
     user-select: none;
     box-sizing: border-box;
-    font-family: Roboto,Roboto Condensed,Generica, sans-serif; */
+    font-family: 'Roboto-regular','Roboto-condensed','genericaregular', sans-serif; 
     list-style: none;
   }
 
   body {
-    font-family: Roboto, Roboto Thin, Generica, sans-serif;
+    font-family: 'Roboto-regular', 'Roboto-thin', 'genericaregular', sans-serif;
     background-image: url("../../img/adminBG.png");
     background-size: cover;
     font-size: 100%;
@@ -35,7 +35,7 @@
 
   h2.aLogo-txt1 {
     margin-top: 3px;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     font-weight: inherit;
     font-size: 100%;
     margin-bottom: 0px;
@@ -56,7 +56,7 @@
     font-size: 120%;
     margin-bottom: 0px;
     letter-spacing: 6px;
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
   }
 
   h3.aLogo-txt2 a {
@@ -102,7 +102,7 @@
     font-size: 1.2em;
     padding: 8px 15px;
     letter-spacing: 1px;
-    font-family: Roboto Light, sans-serif;
+    font-family: 'Roboto-light', sans-serif;
   }
 
   nav ul li a:visited {
@@ -212,7 +212,7 @@
 
   nav ul ul li a {
     line-height: 50px;
-    font-family: Roboto bold, sans-serif;
+    font-family: 'Roboto-bold', sans-serif;
   }
 
   nav ul ul ul li {
@@ -321,7 +321,7 @@
   p {
     font-size: 30px;
     font-weight: 500;
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
   }
 
   /* Container for flexboxes */
@@ -335,7 +335,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -344,7 +344,7 @@
   }
 
   article h1 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: #ffc423;
     font-weight: inherit;
     font-size: 55px;
@@ -453,7 +453,7 @@
   }
 
   aside p.Aelec-guide-txt {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-align: justify;
     font-size: 1em;
     margin-top: 1em;
@@ -483,7 +483,7 @@
     position: relative;
     margin-top: auto;
     margin-bottom: auto;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 7px;
     font-size: 10px;
     color: #ffffff;
@@ -535,7 +535,7 @@
     background-color: #18566e;
     text-align: center;
     font-size: .8rem;
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     border: 1px solid #124254 !important;
@@ -559,7 +559,7 @@
     color: #ffffff;
     width: 100%;
     text-align: center;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
   }
 
@@ -585,7 +585,7 @@
     font-weight: 400;
     width: 100%;
     text-align: center;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
   }
 
@@ -625,7 +625,7 @@
   }
 
   .btn {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     display: inline-block;
     padding: 6px 12px;
     margin: 0;
@@ -705,7 +705,7 @@
   #datatable {
     width: 100%;
     border: 1px solid #124254;
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     border-collapse: collapse;
     table-layout: auto;
     margin: 0px;
@@ -754,7 +754,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -763,7 +763,7 @@
   }
 
   article h1 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: #ffc423;
     font-weight: inherit;
     font-size: 55px;
@@ -831,7 +831,7 @@
   div p.footer-txt {
     position: relative;
     top: .5em;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 7px;
     font-size: 1em;
     color: #ffffff;
@@ -872,7 +872,7 @@
   .input[type=text] {
     width: 100%;
     height: 100%;
-    font-family: Generica Regular, sans-serif
+    font-family: 'genericaregular', sans-serif
   }
 
   .wrapper {
@@ -924,7 +924,7 @@
   /*Styles for landing page*/
 
   div p.elec-guide-txt {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-align: justify;
     font-size: 1.6em;
     margin-top: 1em;
@@ -1004,7 +1004,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -1013,7 +1013,7 @@
   }
 
   article h2 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: white;
   }
 
@@ -1144,7 +1144,7 @@
     font-weight: 400;
     width: 100%;
     text-align: center;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
   }
 
