--- a/css/admin_css/electionConfig.css
+++ b/css/admin_css/electionConfig.css
@@ -1,5 +1,6 @@
+/*Page Header*/
 
-#myHeader{
+#Dheader{
     position: relative;
     z-index: -1;
     padding: 1px 1px;
@@ -12,7 +13,14 @@
     letter-spacing: 6px;
     text-transform: uppercase;
 }
- 
+.Dheader-txt{
+    font-size: 24px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+/*Page contents*/
+
 form {
     width: 40%;
     margin: 50px auto;
