--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -91,11 +91,10 @@ body {
   }
 }
 
-#myHeader{
+#Dheader{
   position: relative;
   z-index: -1;
   padding: 1px 1px;
-  font-size: 35px;
   background: #124254;
   color: #ffc423;
   width: 100%;
@@ -103,6 +102,12 @@ body {
   font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 6px;
   text-transform: uppercase;
+}
+
+.Dheader-txt{
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .pagination>li {
@@ -471,18 +476,4 @@ nav img.user-profile {
   margin-top: 0;
   height: 40px;
   width: 40px;
-}
-
-.cheader {
-  position: relative;
-  z-index: -1;
-  padding: 1px 1px;
-  font-size: 35px;
-  background: #124254;
-  color: #ffc423;
-  width: 100%;
-  text-align: center;
-  font-family: 'Roboto-regular', sans-serif;
-  letter-spacing: 6px;
-  text-transform: uppercase;
 }
