--- a/css/admin_css/style2_actLogs.css
+++ b/css/admin_css/style2_actLogs.css
@@ -91,7 +91,7 @@ body {
   }
 }
 
-#myHeader{
+#DHeader{
   position: relative;
   z-index: -1;
   padding: 1px 1px;
@@ -103,6 +103,12 @@ body {
   font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 6px;
   text-transform: uppercase;
+}
+
+.Dheader-txt{
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .pagination>li {
