--- a/css/admin_css/style_msgBox.css
+++ b/css/admin_css/style_msgBox.css
@@ -318,18 +318,6 @@ nav h5 {
   font-size: 1.05em;
 }
 
-.cheader {
-  z-index: 100;
-  padding: 1px 1px;
-  font-size: 35px;
-  background: #124254;
-  color: #f1f1f1;
-  width: 100%;
-  text-align: center;
-  font-family: Roboto Regular, sans-serif;
-  letter-spacing: 6px;
-}
-
 .pagination>li {
   display: inline;
   padding: 0px;
@@ -695,14 +683,23 @@ nav img.user-profile {
 }
 
 .ccheader {
-  padding: 3px 0 5px 0;
-  color: #f1f1f1;
-  background-color: #124254;
+  position: relative;
+  z-index: -2;
+  padding: 2px 2px;
+  background: #124254;
+  font-weight: 400;
   width: 100%;
   text-align: center;
-  letter-spacing: 7px;
+  font-family: 'Roboto-regular', sans-serif;
+  letter-spacing: 6px;
+  color: #ffc423 !important;
+  text-transform: uppercase;
 }
-
+.ccheader-txt{
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
 /*------------messagebox----------*/
 
 <!--Message Box-->::-webkit-scrollbar {
