--- a/css/admin_css/style_studAcc.css
+++ b/css/admin_css/style_studAcc.css
@@ -331,6 +331,26 @@ nav h5 {
   letter-spacing: 6px;
   text-transform: uppercase;
 }
+/*header for vote summary since tigcopy lang yung css and di naglagay ng separate --*/
+.bheader{
+  position: relative;
+    z-index: -2;
+    padding: 2px 2px;
+    background: #124254;
+    font-weight: 400;
+    width: 100%;
+    text-align: center;
+    font-family: 'Roboto-regular', sans-serif;
+    letter-spacing: 6px;
+    color: #ffc423 !important;
+    text-transform: uppercase;
+}
+
+.bHeader-txt {
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
 
 .pagination>li {
   display: inline;
