--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -5,12 +5,12 @@
     padding: 0;
     user-select: none;
     box-sizing: border-box;
-    font-family: Roboto,Roboto Condensed,Generica, sans-serif; */
+    font-family: 'Roboto-regular','Roboto-condensed','genericaregular', sans-serif; 
     list-style: none;
   }
 
   body {
-    font-family: Roboto, Roboto Thin, Generica, sans-serif;
+    font-family: 'Roboto-regular', 'Roboto-thin', 'genericaregular', sans-serif;
     background-image: url("../../img/adminBG.png");
     background-size: cover;
     font-size: 100%;
@@ -35,7 +35,7 @@
 
   h2.aLogo-txt1 {
     margin-top: 3px;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     font-weight: inherit;
     font-size: 100%;
     margin-bottom: 0px;
@@ -56,7 +56,7 @@
     font-size: 120%;
     margin-bottom: 0px;
     letter-spacing: 6px;
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
   }
 
   h3.aLogo-txt2 a {
@@ -102,7 +102,7 @@
     font-size: 1.2em;
     padding: 8px 15px;
     letter-spacing: 1px;
-    font-family: Roboto Light, sans-serif;
+    font-family: 'Roboto-light', sans-serif;
   }
 
   nav ul li a:visited {
@@ -212,7 +212,7 @@
 
   nav ul ul li a {
     line-height: 50px;
-    font-family: Roboto bold, sans-serif;
+    font-family: 'Roboto-bold', sans-serif;
   }
 
   nav ul ul ul li {
@@ -234,8 +234,26 @@
     font-size: 15px;
     margin-left: 40px;
   } */
+  @media (min-width: 768px){
+    .col-sm-6{
+      width: 100% !important;
+    }
 
+    .center{
+      width: 100% !important;
+    }
+  }
   @media all and (max-width: 968px) {
+    .wrapper{
+      flex-direction: column;
+    }
+    .left{
+      width: 100% !important;
+    }
+
+    .col-sm-6{
+      width: 100%;
+    }
     .img-container{
      overflow:hidden;
      width: 100%;
@@ -321,7 +339,7 @@
   p {
     font-size: 30px;
     font-weight: 500;
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
   }
 
   /* Container for flexboxes */
@@ -335,7 +353,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -344,7 +362,7 @@
   }
 
   article h1 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: #ffc423;
     font-weight: inherit;
     font-size: 55px;
@@ -453,7 +471,7 @@
   }
 
   aside p.Aelec-guide-txt {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-align: justify;
     font-size: 1em;
     margin-top: 1em;
@@ -483,7 +501,7 @@
     position: relative;
     margin-top: auto;
     margin-bottom: auto;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 7px;
     font-size: 10px;
     color: #ffffff;
@@ -535,7 +553,7 @@
     background-color: #18566e;
     text-align: center;
     font-size: .8rem;
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     border: 1px solid #124254 !important;
@@ -551,6 +569,24 @@
     background-color: #ddd;
   }
 
+  #ADheader {
+    position: relative;
+    z-index: -1;
+    padding: 6px;
+    background: #124254;
+    color: #ffffff;
+    width: 100%;
+    text-align: center;
+    font-family: 'Roboto-regular', sans-serif;
+    letter-spacing: 6px;
+  }
+
+  h2.aHeader-txt {
+    font-size: 24px;
+    margin-top: .5%;
+    margin-bottom: .5%;
+  }
+
   .row {
     margin: 0;
   }
@@ -558,6 +594,18 @@
   /*Everything here is for the NavBar*/
 
   /*Datatables*/
+
+  #CM_Header {
+    z-index: 100;
+    padding: 2px 2px;
+    background: #124254;
+    color: #f1f1f1;
+    font-weight: 400;
+    width: 100%;
+    text-align: center;
+    font-family: 'Roboto-regular', sans-serif;
+    letter-spacing: 6px;
+  }
 
   #CPTable {
     width: 100%;
@@ -567,7 +615,7 @@
 
   #CPTable2 {
     padding-top: 35px;
-    width: 160%;
+    /* width: 160%; */
   }
 
   .pagination>li {
@@ -595,7 +643,7 @@
   }
 
   .btn {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     display: inline-block;
     padding: 6px 12px;
     margin: 0;
@@ -675,7 +723,7 @@
   #datatable {
     width: 100%;
     border: 1px solid #124254;
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     border-collapse: collapse;
     table-layout: auto;
     margin: 0px;
@@ -724,7 +772,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -733,7 +781,7 @@
   }
 
   article h1 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: #ffc423;
     font-weight: inherit;
     font-size: 55px;
@@ -773,6 +821,7 @@
 
   /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
+  }
   @media (max-width: 600px) {
     body, section, .container {
       -webkit-flex-direction: column;
@@ -801,7 +850,7 @@
   div p.footer-txt {
     position: relative;
     top: .5em;
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 7px;
     font-size: 1em;
     color: #ffffff;
@@ -842,7 +891,7 @@
   .input[type=text] {
     width: 100%;
     height: 100%;
-    font-family: Generica Regular, sans-serif
+    font-family: 'genericaregular', sans-serif
   }
 
   .wrapper {
@@ -894,7 +943,7 @@
   /*Styles for landing page*/
 
   div p.elec-guide-txt {
-    font-family: Roboto Regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     text-align: justify;
     font-size: 1.6em;
     margin-top: 1em;
@@ -974,7 +1023,7 @@
   }
 
   article p {
-    font-family: Roboto regular, sans-serif;
+    font-family: 'Roboto-regular', sans-serif;
     color: white;
     font-weight: inherit;
     font-size: 20px;
@@ -983,7 +1032,7 @@
   }
 
   article h2 {
-    font-family: Generica regular, sans-serif;
+    font-family: 'genericaregular', sans-serif;
     color: white;
   }
 
@@ -1107,23 +1156,15 @@
   }
 
   .Uheader {
-    position: relative;
-    z-index: -2;
+    z-index: 100;
     padding: 2px 2px;
     background: #124254;
+    color: #f1f1f1;
     font-weight: 400;
     width: 100%;
     text-align: center;
     font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
-    color: #ffc423 !important;
-    text-transform: uppercase;
-  }
-
-  h2.Uheader-txt {
-    font-size: 24px;
-    margin-top: 1%;
-    margin-bottom: 1%;
   }
 
   .btn-button1 {
@@ -1299,6 +1340,7 @@
   }
 
   a.paginate_button:hover {
+    background-color: #15254 !important;
     color: white;
   }
 
