--- a/css/student_css/vote_message.css
+++ b/css/student_css/vote_message.css
@@ -57,7 +57,8 @@
 }
 
 .F-download-receipt-container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 35%;
   margin: auto;
   background-color: #f8f8f8;
