--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -19,7 +19,7 @@ body {
 
 /* Left Content */
 article p {
-  font-family: Roboto-regular, sans-serif;
+  font-family: Roboto Regular, sans-serif;
   color: #124254;
   font-weight: inherit;
   font-size: 20px;
