--- a/css/style_Login.css
+++ b/css/style_Login.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  font-family: 'Roboto-regular', 'genericaregular', sans-serif;
+  /* font-family: 'Roboto-regular', 'genericaregular', sans-serif; */
   background-image: url("../img/sample.png");
   background-size: cover;
   background-attachment: fixed;
@@ -20,7 +20,7 @@ img {
 }
 
 h1 {
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: Roboto Regular, sans-serif;
   text-align: center;
   margin: 0px auto;
   display: block;
@@ -37,7 +37,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'genericaregular', sans-serif;
+  font-family: Generica, sans-serif;
   color: #18566e;
   font-weight: inherit;
   font-size: 5em;
@@ -46,7 +46,7 @@ h2 {
 }
 
 p {
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: Roboto Regular, sans-serif;
   color: #124254;
   font-weight: inherit;
   font-size: 1.5em;
