--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -134,7 +134,7 @@ iframe {
 }
 
 .btn {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   display: inline-block;
   padding: 6px 12px;
   margin: 0px;
@@ -359,7 +359,7 @@ div.container {
   background: rgba(255, 255, 255, 0.7);
   margin-top: 3%;
   margin-bottom: 3%;
-  /*border: 2px solid #124254;*/
+  border: 2px solid #124254;
   width: 80%;
   height: auto;
 }
@@ -375,7 +375,7 @@ div.container {
 #datatable {
   width: 100%;
   border: 1px solid #124254;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   border-collapse: collapse;
   table-layout: auto;
   margin: 0px;
@@ -413,6 +413,10 @@ td {
   max-height: 150px;
   overflow: hidden;
   word-wrap: break-word;
+}
+
+table tbody tr:hover {
+  background-color: #D3D3D3;
 }
 
 article p {
