--- a/css/admin_css/style_studAcc.css
+++ b/css/admin_css/style_studAcc.css
@@ -588,7 +588,7 @@ div.container {
 #datatable {
   width: 100%;
   border: 1px solid #124254;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   border-collapse: collapse;
   table-layout: auto;
   margin: 0px;
@@ -619,6 +619,10 @@ th {
   text-align: center;
 }
 
+table tbody tr:hover {
+  background-color: #D3D3D3;
+}
+
 td {
   border: 1px solid #124254;
   padding: 0px;
@@ -631,55 +635,6 @@ td {
 table tbody tr:hover {
   background-color: #D3D3D3;
 }
-
-article p {
-  font-family: Roboto regular, sans-serif;
-  color: white;
-  font-weight: inherit;
-  font-size: 20px;
-  letter-spacing: 3px;
-  position: relative;
-}
-
-article h1 {
-  font-family: Generica regular, sans-serif;
-  color: #ffc423;
-  font-weight: inherit;
-  font-size: 55px;
-  position: relative;
-  letter-spacing: 3px;
-  margin-top: 10px;
-}
-
-/* Style the content */
-
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  padding: 10px;
-}
-
-/*For logos on top of welcome banner*/
-
-img.logos {
-  float: left;
-  padding-left: 10px;
-  height: 90px;
-  width: 100px;
-  margin-bottom: 2em;
-}
-
-.logo-container {
-  position: relative;
-  /* float: left; */
-  display: -webkit-flex;
-  display: flex;
-  margin-left: 0px;
-  margin-top: 0px;
-  max-width: 700px;
-}
-
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
 @media (max-width: 600px) {
