--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -31,6 +31,7 @@ table.center {
   background-color: #18566e;
   /*overflow: hidden;*/
   font-size: 17px;
+
 }
 
 #side_pos th {
@@ -39,7 +40,7 @@ table.center {
   font-size: 1.2em;
   text-align: left;
   padding-left: 9px;
-  border-radius: 4px;
+  font-family: 'roboto-regular', sans-serif;
 }
 
 #side_pos td {
@@ -51,8 +52,9 @@ table.center {
   text-align: left;
   background-color: #fece4b;
   width: 170px;
-  border-radius: 4px;
+  font-family: 'roboto-regular', sans-serif;
 }
+
 
 #side_pos button {
   padding: 0 200px;
@@ -65,231 +67,6 @@ table.center {
 
 .text-center {
   text-align: center;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  box-sizing: border-box;
-  list-style: none;
-}
-
-body {
-  font-family: Roboto, Roboto Thin, Generica, sans-serif;
-  background-image: url("../IMG/studentBG.png");
-  background-size: cover;
-  font-size: 100%;
-  background-attachment: fixed;
-  width: auto;
-  min-height: 100%;
-}
-
-nav {
-  background: #f8f8f8;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
-  width: auto;
-  z-index: 3;
-}
-
-nav:before {
-  min-height: 100%;
-}
-
-nav:after {
-  content: '';
-  clear: both;
-  display: table;
-}
-
-nav h2 {
-  font-family: Roboto Regular, sans-serif;
-  font-weight: inherit;
-  font-size: 140%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  color: #124254;
-}
-
-nav h3 {
-  margin-top: 0px;
-  color: #124254;
-  padding-top: 5px;
-  font-weight: inherit;
-  font-size: 170%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
-}
-
-nav .Alogo {
-  float: left;
-  position: relative;
-  line-height: 80px;
-  margin-top: 5px;
-  margin-left: 40px;
-}
-
-nav ul {
-  float: right;
-  padding: 0;
-  height: 80px;
-  /* margin-right: 40px; */
-  margin-bottom: 0;
-  list-style: none;
-  position: relative;
-  text-align: center;
-  z-index: 4;
-}
-
-nav ul li {
-  float: left;
-  display: inline-block;
-  height: 80px;
-  background: #f8f8f8;
-  text-align: center;
-  /* margin: 0 5px; */
-  width: 150px;
-}
-
-nav ul li a {
-  color: black;
-  line-height: 70px;
-  text-decoration: none;
-  font-size: 1.6em;
-  padding: 8px 15px;
-  letter-spacing: 1px;
-  font-family: Roboto Light, sans-serif;
-}
-
-nav ul li a:visited {
-  color: black;
-  text-decoration: none;
-}
-
-nav ul li a:hover {
-  color: black;
-  text-decoration: none;
-}
-
-nav ul li a:active {
-  text-decoration: none;
-}
-
-nav ul li:hover {
-  background-color: #fece4b;
-}
-
-nav ul li a:active {
-  color: green;
-}
-
-nav ul ul {
-  position: absolute;
-  top: 90px;
-  border-top: 3px solid #18566e;
-  opacity: 0;
-  visibility: hidden;
-  transition: top .3s;
-}
-
-nav ul ul li {
-  height: 50px;
-  position: relative;
-  margin: 0px;
-  float: none;
-  display: list-item;
-}
-
-nav ul ul li a {
-  line-height: 50px;
-}
-
-nav ul ul li a.Aelec-text {
-  font-size: 1.2em;
-}
-
-nav ul ul li .logout::before {
-  content: "\f2f5";
-  font-family: "Font Awesome 5 Free";
-  padding: 0 10px 0 0;
-}
-
-nav ul ul li a:link {
-  color: rgb(0, 0, 0);
-}
-
-nav ul ul li a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-nav ul ul li a:hover {
-  color: white;
-  box-shadow: none;
-  text-decoration: none;
-}
-
-nav ul ul li:hover {
-  background-color: #124254;
-  text-decoration: none;
-}
-
-nav ul ul li a:active {
-  color: #1b1b1b;
-  box-shadow: none;
-  text-decoration: none;
-}
-
-nav ul ul ul {
-  border-top: none;
-}
-
-nav ul ul ul li {
-  position: relative;
-  top: -60px;
-  left: 150px;
-}
-
-nav ul li:hover>ul {
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-
-nav ul ul li {
-  background: #18566e;
-  position: relative;
-  margin: 0px;
-  width: 150px;
-  font-size: 0.8em;
-  float: none;
-  display: list-item;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  z-index: 1;
-}
-
-nav ul ul li a {
-  color: black;
-  line-height: 50px;
-  font-family: Roboto bold, sans-serif;
-}
-
-nav ul ul ul li {
-  position: relative;
-  font-size: 1em;
-  top: -60px;
-  left: 150px;
-}
-
-.Ashow, .Aicon, input {
-  display: none;
-}
-
-nav img.Auser-profile {
-  margin-top: 0;
-  height: 40px;
-  width: 40px;
 }
 
 /* .fa-plus{
@@ -566,7 +343,12 @@ footer {
   margin-left: auto;
   flex-wrap: wrap;
 }
-
+.modal-header{
+  font-family: 'roboto-regular', sans-serif !important; 
+}
+.card_name{
+  font-family: 'roboto-regular', sans-serif;
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
@@ -688,4 +470,17 @@ footer {
   text-decoration: none;
   margin-top: 0;
   text-align: left;
+}
+
+@media (min-width: 600px) and (max-width: 968px){
+.Uright{
+    overflow-y: scroll;
+    margin-left: auto;
+    height: 350px;
+}
+  
+.Uwrapper{
+  flex-direction: column;
+}
+  
 }
