--- a/css/admin_css/dataTables.bootstrap_monitor.css
+++ b/css/admin_css/dataTables.bootstrap_monitor.css
@@ -161,7 +161,7 @@ div.dataTables_scrollHead table.table-bordered {
 }
 
 .table.dataTable tbody tr.active th>a, .table.dataTable tbody tr.active td>a {
-    color: white;
+    color:white;
 }
 
 .table-striped.dataTable tbody tr.active:nth-child(odd) td, .table-striped.dataTable tbody tr.active:nth-child(odd) th {
@@ -243,7 +243,7 @@ div.dataTables_processing {
     padding-bottom: 20px;
     text-align: center;
     font-size: 1.2em;
-    background-color: white;
+    background-color: ;
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(25%, rgba(255, 255, 255, 0.9)), color-stop(75%, rgba(255, 255, 255, 0.9)), color-stop(100%, rgba(255, 255, 255, 0)));
     background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 25%, rgba(255, 255, 255, 0.9) 75%, rgba(255, 255, 255, 0) 100%);
     background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 25%, rgba(255, 255, 255, 0.9) 75%, rgba(255, 255, 255, 0) 100%);
