--- a/css/admin_css/style1_monitor.css
+++ b/css/admin_css/style1_monitor.css
@@ -45,7 +45,7 @@ nav h3 {
   font-size: 120%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
+  font-family: genericaregular, sans-serif;
 }
 
 nav .logo {
@@ -437,9 +437,15 @@ iframe {
 }
 
 .container {
-  background-color: #f5f5f5;
-  margin: 30px 15px 25px 15px;
+  padding:2rem;
+  background-color: rgba(255,255,255, 0.7);
+  margin-top: 3%;
+  margin-bottom: 3%;
   border: 2px solid #124254;
+  width: 80%;
+  height: auto;
+ 
+  
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -462,11 +468,12 @@ iframe {
 #datatable {
   width: 100%;
   border: 2px solid #124254;
-  font-family: Roboto-regular, sans-serif;
+  font-family: Roboto regular, sans-serif;
   border-collapse: collapse;
   table-layout: auto;
   margin: 0px;
   text-align: center;
+  background: rgba(255, 255, 255, 0.6);
 }
 
 table.center {
@@ -503,7 +510,7 @@ td {
 }
 
 article p {
-  font-family: Roboto-regular, sans-serif;
+  font-family: Roboto regular, sans-serif;
   color: white;
   font-weight: inherit;
   font-size: 20px;
@@ -542,7 +549,6 @@ img.logos {
 
 .logo-container {
   position: relative;
-  /* float: left; */
   display: -webkit-flex;
   display: flex;
   margin-left: 0px;
@@ -574,7 +580,7 @@ img.logos {
 div p.footer-txt {
   position: relative;
   top: .5em;
-  font-family: Roboto Regular, sans-serif;
+  font-family: Roboto regular, sans-serif;
   letter-spacing: 7px;
   font-size: 0.7em;
   color: #ffffff;
@@ -595,74 +601,9 @@ nav img.user-profile {
   letter-spacing: 7px;
 }
 
-<!--Message Box--> ::-webkit-scrollbar {
-  width: 15px;
-}
-
-::-webkit-scrollbar-track {
-  width: 5px;
-  background: #f5f5f5;
-}
-
-::-webkit-scrollbar-thumb {
-  width: 1em;
-  background-color: #ddd;
-  outline: 1px solid black;
-  border-radius: 1rem;
-}
-
-#top {
-  border: none;
-  background-color: #124254!important;
-}
-
-#receive {
-  background-color: #124254!important;
-}
-
-.btn-link {
-  color: #124254!important;
-  font-size: 1.0rem!important;
-}
-
-#recent {
-  color: #124254!important;
-  font-weight: bold;
-}
-
-.text-small {
-  font-family: Roboto regular, sans-serif;
-  font-size: 1rem;
-}
-
-.messages-box, .chat-box {
-  height: 390px;
-  overflow-y: scroll;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-input::placeholder {
-  font-size: 1.0rem;
-  color: #999;
-}
-
-.cname {
-  font-weight: bold;
-  font-size: 1rem;
-  margin-bottom: 0;
-}
-
-.cmessage {
-  font-size: 0.9rem;
-}
-
-/* Vote Status Percentage */
 
 .Bvotestat p {
-  font-family: Roboto black;
+  font-family: Roboto regular;
   color: #ffc423;
   font-weight: inherit;
   font-size: 45px;
@@ -673,121 +614,12 @@ input::placeholder {
   z-index: -1000;
 }
 
-.Bcon {
-  display: flex;
-  margin-left: 230px;
-  margin-top: 90px;
-  max-width: 10px;
-}
-
-.Bvcontainer {
-  position: relative;
-  width: 900px;
-  display: flex;
-  justify-content: space-around;
-}
-
-.Bvcontainer .Bcard {
-  position: relative;
-  width: 250px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  border-radius: 4px;
-  text-align: center;
-  margin-left: 50px;
-  transition: 0.5s;
-}
-
-.Bvcontainer .Bcard:hover {
-  /*transform:translateY(-10px);*/
-  box-shadow: 0 15px 35px rgba(160, 137, 10, 0.788);
-}
-
-.Bvcontainer .Bcard:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0%;
-  100%;
-  backgro width: 100%;
-  height: und: rgba(73, 163, 0, 0.03);
-  pointer-events: none;
-  z-index: 1;
-}
-
-/*Vote Status per grade level*/
-
-.table {
-  text-align: center;
-}
-
 .Bvs_gradelevel p {
-  font-family: Roboto black;
+  font-family: Roboto regular;
   font-size: 20px;
   position: relative;
   letter-spacing: 3px;
   text-align: center;
   z-index: -1000;
   margin-top: -50px;
-}
-
-.Bbtn_goback {
-  border: none;
-  font-style: Roboto;
-  background-color: white;
-  padding: 6px 8px;
-  margin-left: 10px;
-  font-size: 11px;
-  cursor: pointer;
-  border-radius: 20px;
-  margin-bottom: 15px;
-}
-
-.Bnp {
-  margin-top: -12px;
-}
-
-.Bnp a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 6px 16px;
-}
-
-.Bnp a:hover {
-  background-color: #ffc423;
-  color: #1d6986;
-}
-
-.Bprevious {
-  background-color: white;
-  color: black;
-  font-size: 16px;
-  margin-left: 667px;
-}
-
-.Bnext {
-  background-color: white;
-  color: black;
-  font-size: 16px;
-  margin-left: 5px;
-}
-
-.round {
-  border-radius: 50%;
-}
-
-.Btitle {
-  background-color: #1d6986;
-  font-family: Roboto;
-  color: #ffc423;
-  text-align: center;
-  font-size: 15px;
-}
-
-.Btable_contents {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 12px;
 }
