--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -3,18 +3,7 @@
 	padding: 0;
 	user-select: none;
 	box-sizing: border-box;
-
 	list-style: none;
-}
-
-body {
-	font-family: Roboto-regular, Roboto Thin, genericaregular, sans-serif;
-	background-image: url("../../img/adminBG.png");
-	background-size: cover;
-	font-size: 100%;
-	background-attachment: fixed;
-	width: auto;
-	min-height: 100%;
 }
 
 nav {
@@ -33,7 +22,7 @@ nav:after {
 
 h2.aLogo-txt1 {
 	margin-top: 3px;
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	font-weight: inherit;
 	font-size: 100%;
 	margin-bottom: 0px;
@@ -97,7 +86,7 @@ nav ul li a {
 	font-size: 1.2em;
 	padding: 8px 15px;
 	letter-spacing: 1px;
-	font-family: Roboto Light, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 }
 
 nav ul li a:visited {
@@ -207,7 +196,7 @@ nav ul ul li {
 
 nav ul ul li a {
 	line-height: 50px;
-	font-family: Roboto bold, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 }
 
 nav ul ul ul li {
@@ -230,11 +219,6 @@ nav ul ul ul li {
 .nav-toggle6 {
 	display: none;
 }
-
-/* .fa-plus{
-  font-size: 15px;
-  margin-left: 40px;
-} */
 
 @media all and (max-width: 968px) {
 	nav ul {
@@ -293,12 +277,7 @@ nav ul ul ul li {
 	nav ul ul a {
 		left: 0;
 	}
-	/* nav ul ul ul a{
-    padding-left: 80px;
-  }
-  nav ul ul ul li{
-    position: static;
-  } */
+
 	[id^="btn"]:checked + ul {
 		width: 100%;
 		left: 0;
@@ -316,7 +295,7 @@ nav ul ul ul li {
 p {
 	font-size: 30px;
 	font-weight: 500;
-	font-family: Generica regular, sans-serif;
+	font-family: 'genericaregular', sans-serif;
 }
 
 /* Container for flexboxes */
@@ -330,7 +309,7 @@ section {
 }
 
 article p {
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	color: white;
 	font-weight: inherit;
 	font-size: 20px;
@@ -339,7 +318,7 @@ article p {
 }
 
 article h1 {
-	font-family: Generica regular, sans-serif;
+	font-family: 'genericaregular', sans-serif;
 	color: #ffc423;
 	font-weight: inherit;
 	font-size: 55px;
@@ -369,7 +348,6 @@ img.logos {
 
 .logo-container {
 	position: relative;
-	/* float: left; */
 	display: -webkit-flex;
 	display: flex;
 	margin-left: 0px;
@@ -422,7 +400,6 @@ aside {
 }
 
 #AD-CD-contents {
-	/* max-width: 90%; */
 	border: 1px solid #ffc423;
 	border-width: 3px;
 	text-align: center;
@@ -444,7 +421,7 @@ div li span {
 }
 
 aside p.Aelec-guide-txt {
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	text-align: justify;
 	font-size: 1em;
 	margin-top: 1em;
@@ -453,7 +430,6 @@ aside p.Aelec-guide-txt {
 
 #ADaside-container {
 	min-height: 100%;
-	/* overflow: auto; */
 	padding-bottom: 50px;
 }
 
@@ -474,7 +450,7 @@ div p.footer-txt {
 	position: relative;
 	margin-top: auto;
 	margin-bottom: auto;
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	letter-spacing: 7px;
 	font-size: 10px;
 	color: #ffffff;
@@ -526,7 +502,7 @@ th {
 	background-color: #18566e;
 	text-align: center;
 	font-size: 0.8rem;
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	border: 1px solid #124254 !important;
@@ -544,19 +520,20 @@ td {
 #ADheader {
 	position: relative;
 	z-index: -1;
-	padding: 6px;
+	padding: 1px 1px;
 	background: #124254;
-	color: #ffffff;
+	color: #ffc423;
 	width: 100%;
 	text-align: center;
-	font-family: Roboto-regular, sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	letter-spacing: 6px;
+	text-transform: uppercase
 }
 
 h2.aHeader-txt {
 	font-size: 24px;
-	margin-top: 0.5%;
-	margin-bottom: 0.5%;
+	margin-top: 1%;
+	margin-bottom: 1%;
 }
 
 .row {
@@ -566,7 +543,7 @@ h2.aHeader-txt {
 /* Election*/
 
 .Belecstat p {
-	font-family: Roboto black;
+	font-family: 'Roboto-regular', sans-serif;
 	color: #ffc423;
 	font-weight: inherit;
 	font-size: 300%;
@@ -629,7 +606,7 @@ h2.aHeader-txt {
 .Bposition5 h1 {
 	color: rgb(0, 0, 0);
 	text-transform: uppercase;
-	font-family: Roboto-regular;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 100%;
 	position: relative;
 	text-align: center;
@@ -644,7 +621,7 @@ h2.aHeader-txt {
 .Bposition11 h1 {
 	color: rgb(0, 0, 0);
 	text-transform: uppercase;
-	font-family: Roboto-regular;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 200%;
 	position: relative;
 	text-align: center;
@@ -655,7 +632,6 @@ h2.aHeader-txt {
 	background: #0c1d34;
 	padding: 2px;
 	box-sizing: border-box;
-	/* border: 1px solid #0e1f26; */
 	border-radius: 0px;
 	margin-top: 20px;
 	margin-left: 60px;
@@ -668,9 +644,7 @@ h2.aHeader-txt {
 	border-radius: 1px;
 	color: #1d6986;
 	text-indent: 5px;
-	/* padding-left:2px; */
-	/* text-align: center; */
-	font-family: Roboto;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 145%;
 }
 
@@ -689,7 +663,7 @@ h2.aHeader-txt {
 
 .Bbtn_postresults {
 	border: none;
-	font-style: Roboto;
+	font-style: 'Roboto-regular', sans-serif;
 	background-color: #1d6986;
 	padding: 1em 2.1em 1.1em;
 	cursor: pointer;
@@ -703,7 +677,7 @@ h2.aHeader-txt {
 
 .Bbtn_resetresults {
 	border: none;
-	font-style: Roboto;
+	font-style: 'Roboto-regular', sans-serif;
 	background-color: #1d6986;
 	padding: 1em 2.1em 1.1em;
 	cursor: pointer;
@@ -750,7 +724,7 @@ h2.aHeader-txt {
 }
 
 .Bvotestat p {
-	font-family: Roboto-regular;
+	font-family: 'Roboto regular', sans-serif;
 	color: #ffc423;
 	font-weight: inherit;
 	font-size: 300%;
@@ -766,7 +740,7 @@ h2.aHeader-txt {
 	width: 100%;
 	justify-content: space-around;
 	display: grid;
-	grid-column-gap: 100px;
+	grid-column-gap: 10%;
 	grid-row-gap: 10%;
 	grid-template-columns: repeat(auto-fit, minmax(100px, 4fr));
 	grid-template-rows: repeat(1, 100px);
@@ -798,7 +772,7 @@ h2.aHeader-txt {
 
 .Bbox a {
 	color: white;
-	font-family: Roboto;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 20px;
 	text-align: center;
 	padding: 10px;
@@ -808,90 +782,13 @@ h2.aHeader-txt {
 .circle{
 	color: #ffc423;
 	font-size: 200%;
-	font-family: Roboto Regular;
+	font-family: 'Roboto-regular', sans-serif;
   }
 
-/*Vote Status per grade level*/
-
-.Bvotestatus p {
-	font-family: Roboto black;
-	color: #ffc423;
-	font-size: 300%;
-	position: relative;
-	letter-spacing: 1px;
-	text-align: center;
-	z-index: -1000;
-	margin-top: 15px;
-}
-
-.table {
-	text-align: center;
-	margin-top: 0.5%;
-}
-
-.Bvs_gradelevel p {
-	font-family: Roboto-regular;
-	font-size: 20px;
-	position: relative;
-	letter-spacing: 3px;
-	text-align: center;
-	z-index: -1000;
-	margin-top: -25px;
-}
-
-.Bnp {
-	margin-top: 20px;
-	display: flex;
-	align-content: center;
-	justify-content: center;
-}
-
-.Bnp a {
-	text-decoration: none;
-	display: inline-block;
-	padding: 8px 24px;
-}
-
-.Bnp a:hover {
-	background-color: #ffc423;
-	color: #1d6986;
-}
-
-.Bprevious {
-	background-color: white;
-	color: black;
-	font-size: 25px;
-}
-
-.Bnext {
-	background-color: white;
-	color: black;
-	font-size: 25px;
-	margin-left: 20px;
-}
-
-.round {
-	border-radius: 50%;
-}
-
-.Btitle {
-	background-color: #1d6986;
-	font-family: Roboto;
-	color: #ffc423;
-	text-align: center;
-	font-size: 12px;
-}
-
-.Btable_contents {
-	background-color: #fff;
-	font-family: Roboto;
-	font-size: 9px;
-}
-
-/* Election Archives Folder*/
+/*Election Archives Folder*/
 
 .Barchives p {
-	font-family: Roboto black;
+	font-family: 'Roboto-regular', sans-serif;
 	color: #ffc423;
 	font-weight: inherit;
 	font-size: 300%;
@@ -899,49 +796,12 @@ h2.aHeader-txt {
 	letter-spacing: 1px;
 	text-align: center;
 	margin-top: 40px;
-}
+  }
 
-.Bimgs img {
-	position: relative;
-	z-index: -1000;
-	max-width: 100%;
-	height: auto;
-}
 
-.Bboxes_arch a {
-	color: black;
-	font-family: Roboto;
-	font-size: 150%;
-	text-align: center;
-	margin-top: -5px;
-}
-
-.Bboxes_arch a:hover {
-	color: white;
-}
-
-.Bcards {
-	position: relative;
-	width: 200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 220px;
-	border-radius: 4px;
-	text-align: center;
-	margin: auto;
-	margin-top: 20px;
-	transition: 0.5s;
-	border-radius: 60%;
-}
-
-.Bcards:hover {
-	/*transform:translateY(-10px);*/
-	box-shadow: 0 15px 35px rgba(160, 137, 10, 0.788);
-}
-
-.Bcards:before {
-	content: "";
+  
+  .Bcard:before {
+	content: '';
 	position: absolute;
 	top: 0;
 	left: 0%;
@@ -950,27 +810,26 @@ h2.aHeader-txt {
 	/*background: rgba(73, 163, 0, 0.03);*/
 	pointer-events: none;
 	z-index: 1;
-}
-
-svg1 {
+  }
+  
+  svg {
 	position: relative;
 	margin-top: -240px;
 	width: 150px;
 	height: 150px;
 	z-index: 1000;
-}
+  }
 
 /*Election Archives List*/
 
 .Barch_year {
-	font-family: Roboto;
+	font-family: 'Roboto-regular', sans-serif;
 	color: #030f15;
 	font-weight: inherit;
-	font-size: 1.5vw;
+	font-size: 150%;
 	position: relative;
 	letter-spacing: 1px;
 	text-align: center;
-	font-style: italic;
 	margin-top: -10px;
 }
 
@@ -1054,7 +913,7 @@ svg1 {
 /* Election Results Report */
 
 .Breport p {
-	font-family: Roboto-regular;
+	font-family: 'Roboto-regular', sans-serif;
 	color: #ffc423;
 	font-weight: inherit;
 	font-size: 45px;
@@ -1067,7 +926,7 @@ svg1 {
 
 /*No On-going Election*/
 .Belec2 p {
-	font-family: Roboto-regular;
+	font-family: 'Roboto-regular', sans-serif;
 	color: white;
 	font-weight: inherit;
 	font-size: 300%;
@@ -1076,7 +935,7 @@ svg1 {
 	margin-top: 190px;
 }
 .Bon2 h1 {
-	font-family: Roboto-regular;
+	font-family: 'Roboto-regular', sans-serif;
 	color: #e0a900;
 	font-weight: inherit;
 	font-size: 500%;
